TMP right arrow, dot spacing, fix dots on one line

--- a/sass/_make-columns.scss
+++ b/sass/_make-columns.scss
@@ -31,7 +31,7 @@
 			// Left arrow
 			~ .arrows:not(.right) > label:nth-of-type(#{$i}),
 			// Right arrow
-			~ .arrows:not(.left) > label:nth-of-type(#{$i + 2}) {
+			~ .arrows:not(.left) > label:nth-of-type(#{($i - $i % $n + 1) * $n + 1}) {
 				display: block;
 			}
 		}
